remove unnecessary md files and also fixing bugs
